--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,85 +1,90 @@
-﻿@model CallTrak
+﻿@model CallTrakViewModel
 @{
-    ViewData["Title"] = "Home Page";
-
-    if (TempData["AlertMessage"] != null)
-    {
-        <script>
-            alert('@TempData["AlertMessage"]');
-        </script>
-    }
+    ViewData["Title"] = "Dashboard";
 }
 
 <script src="https://kit.fontawesome.com/b7f176f682.js" crossorigin="anonymous"></script>
 
 <div id="main_container">
 
-    <h2 class="text-primary m-3 text-center">Calltrak System</h2>
-    <!--search bar-->
-    <form class="ms-4"id="search" method="get">
-        <label for="#search_bar" class="text-secondary">Search</label>
-        <input id="search_bar" placeholder="Search.." name="id"/>
-        <button type="submit"class="btn btn-primary">Search</button>
-    </form>
+    <h2 class="text-primary m-3 text-center">Dashboard</h2>
 
-    
-
-    <!--CallTrak Container-->
-    <div id="calltrak_container" class="m-4">
-        <!--define tabs-->
-        <ul class="nav nav-tabs" id="myTab">
-            <li class="nav-item">
-                <a href="#description" class="nav-link active" data-bs-toggle="tab">Description</a>
-            </li>
-            <li class="nav-item">
-                <a href="#action" class="nav-link" data-bs-toggle="tab">Action</a>
-            </li>
-            <li class="nav-item">
-                <a href="#dev_notes" class="nav-link" data-bs-toggle="tab">Developer Notes</a>
-            </li>
-            <li class="nav-item">
-                <a href="#billing_notes" class="nav-link" data-bs-toggle="tab">Billing Notes</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link text-secondary" data-bs-toggle="tab"><i class="fa-solid fa-plus"></i></a>
-            </li>
-        </ul>
-        <!--tab content-->
-        <form class="mt-3" asp-action="Index" method="post">
-            <div class="tab-content">
-                <!--description-->
-                <div class="tab-pane fade show active" id="description">
-                    <textarea asp-for="DescriptionContents" id="description_editor" placeholder="Enter description here..."></textarea>
+    <div class="row">
+        <div class="col-sm-2">
+            <form asp-action="Filter" method="post">
+                <div class="form-group">
+                    <label>Category:</label>
+                    <select name="filter" class="form-control">
+                    <option>1</option>
+                    </select>
                 </div>
-
-                <!--action-->
-                <div class="tab-pane fade" id="action">
-                    <textarea asp-for="ActionContents" id="action_editor" placeholder="Enter actions here..."></textarea>
+                <div class="form-group">
+                    <label>Due:</label>
+                    <select name="filter" class="form-control">
+                        <option>1</option>
+                    </select>
                 </div>
-
-                <!--dev notes-->
-                <div class="tab-pane fade" id="dev_notes">
-                    <textarea asp-for="DevNotesContents" id="dev_notes_editor" placeholder="Enter developer notes here..."></textarea>
+                <div class="form-group">
+                    <label>Status:</label>
+                    <select name="filter" class="form-control">
+                        <option>1</option>
+                    </select>
                 </div>
+                <button type="submit" class="btn btn-primary">Filter</button>
+                <a asp-action="Index" asp-route-id="" class="btn btn-primary">Clear</a>
+            </form>
+        </div>
+        <div class="col-sm-10">
 
-                <!--billing notes-->
-                <div class="tab-pane fade" id="billing_notes">
-                    <textarea asp-for="BillingNotesContents" id="billing_notes_editor" placeholder="Enter billing notes here..."></textarea>
-                </div>
-            </div>
+            <a asp-controller="Editor" asp-action="Add"><b>New CallTrak</b></a>
 
-            <!--buttons-->
-            <div class="d-flex mt-3">
-                <input type="hidden" asp-for="CallTrakID" />
-                <a asp-action="Add" class="btn btn-primary m-1">New CallTrak</a>
-                <button type="submit" class="btn btn-primary m-1">Save</button>
-            </div>
-        </form>
+            <table class="table table-bordered table-striped mt-2">
+                <thead>
+                    <tr>
+                        <th>CallTrak ID</th>
+                        <th>Employee</th>
+                        <th>Type</th>
+                        <th>Status</th>
+                        <th class="w-25">Controls</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (CallTrak ct in Model.CallTraks)
+                    {
+                        <tr>
+                            <td>@ct.CallTrakID</td>
+                            <td>@ct.Employee.FirstName</td>
+                            <td>@ct.Type.Description</td>
+                            <td>@ct.Status.Description</td>
+                            <td>
+                                <form method="post"
+                                  
+                                  class="mr-2">
 
+                                    <input type="hidden"
+                                       name="" value="" />
+
+                                    <a  asp-controller="Editor"
+                                        asp-action="Index"
+                                        asp-route-id="@ct.CallTrakID"
+                                        class="btn btn-primary btn-sm">
+                                        Edit
+                                    </a>
+
+                                    <button type="submit"
+                                        class="btn btn-primary btn-sm">
+                                        Delete
+                                    </button>
+                                </form>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
         
-    </div><!--end CallTrak-->
-
-</div><!--End main container-->
+</div><!--end Main container-->
 
 
 
